src/objects/ComplianceConditionsofApproval__c.object
<CustomObject>
    <fields>
        <fullName>ComplianceStatusDate__c</fullName>
        <label>Compliance Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceStatus__c</fullName>
        <label>Compliance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Compliant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConditionsCompletedDate__c</fullName>
        <label>Conditions Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConditionsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditions Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOAApprovalRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOA Approval Request</label>
        <referenceTo>DOAApprovalRequest__c</referenceTo>
        <relationshipName>ComplianceConditionsofApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeneralComments__c</fullName>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conditions of Approval Compliance</label>
    <nameField>
        <displayFormat>Condition-{0}</displayFormat>
        <label>Conditions of Approval Compliance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions of Approval Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>